test-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: internal-app-ingress
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
   - host: aaca667482d5c4a97ae4a0644c50cc18-b20e3fdfc3d29c0e.elb.ap-south-1.amazonaws.com
     http:
       paths:
         - path: /service1
           pathType: Prefix
           backend:
             service:
               name: microservice-1
               port:
                 number: 7000
         - path: /service2
           pathType: Prefix
           backend:
             service:
               name: microservice-2
               port:
                 number: 7001
